Paginación de productos Tienda

--- a/Jardines2022.Web/Views/Shared/_Layout.cshtml
+++ b/Jardines2022.Web/Views/Shared/_Layout.cshtml
@@ -130,9 +130,9 @@ else if (Session["Nombre"] != null)
         </li>
 
         <li>
-            <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+            <a class="dropdown-item d-flex align-items-center" href="@Url.Action("ConfiguracionCuenta","Acceso")">
                 <i class="bi bi-gear"></i>
-                <span>Account Settings</span>
+                <span>Configuración de la Cuenta</span>
             </a>
         </li>
         <li>
