--- a/Jardines2022.Web/Views/Tienda/Tienda.cshtml
+++ b/Jardines2022.Web/Views/Tienda/Tienda.cshtml
@@ -1,61 +1,63 @@
 ﻿<main class="main">
     <section id="main" class="main">
-        <div class="col-md-12 mb-4">
-            <div class="card">
-                <div class="row mt-2 mb-2 m-2 mx-2">
-                    <h5>Filtrar productos por categorias.</h5>
+        <div class="flex-fill">
+            <div class="col-md-12 mb-4">
+                <div class="card">
+                    <div class="row mt-2 mb-2 m-2 mx-2">
+                        <h5>Filtrar productos por categorias.</h5>
 
-                    <div class="row g-0">
-                        <div class="col-auto">
-                            <label for="nroDeProductos" class="col-form-label">Mostrar: </label>
-                        </div>
-                        <div class="col-auto">
-                            <select name="nroDeProductos" id="nroDeProductos" class="form-select">
-                                <option value="10">10</option>
-                                <option value="25">25</option>
-                                <option value="50">50</option>
-                            </select>
-                        </div>
-                        <div class="col-auto">
-                            <label for="nroDeProductos" class="col-form-label"> productos</label>
-                        </div>
-                        <div class="col-4"></div>
-                        <div class="col-auto">
-                            <select id="cboCategoria" class="form-select" aria-label="Default select example">
-                            </select>
-                        </div>
-                        <div class="col-auto">
-                            <button id="btnAplicarFiltros" class="btn btn-outline-primary btn-block">
-                                <i class="fas fa-filter"></i>Aplicar Filtro
-                            </button>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div id="ContenedorDeProductos" class="col-lg-12">
-                <div class="card mb-3">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="#" class="img-fluid rounded-start" height="100" width="100" alt="Alternate Text" />
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Card with an image on left</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <div class="row g-0">
+                            <div class="col-auto">
+                                <label for="nroDeProductos" class="col-form-label">Mostrar: </label>
+                            </div>
+                            <div class="col-auto">
+                                <select name="nroDeProductos" id="nroDeProductos" class="form-select">
+                                    <option value="10">10</option>
+                                    <option value="25">25</option>
+                                    <option value="50">50</option>
+                                </select>
+                            </div>
+                            <div class="col-auto">
+                                <label for="nroDeProductos" class="col-form-label"> productos</label>
+                            </div>
+                            <div class="col-4"></div>
+                            <div class="col-auto">
+                                <select id="cboCategoria" class="form-select" aria-label="Default select example">
+                                </select>
+                            </div>
+                            <div class="col-auto">
+                                <button id="btnAplicarFiltros" class="btn btn-outline-primary btn-block">
+                                    <i class="fas fa-filter"></i>Aplicar Filtro
+                                </button>
                             </div>
                         </div>
 
                     </div>
                 </div>
             </div>
-        </div>
-        <!--PAGINACIÓN-->
-        <div class="row">
-            <button id="btnSiguiente">Siguiente</button>
-            <button id="btnAnterior">Anterior</button>
+            <div class="row">
+                <div id="ContenedorDeProductos" class="col-lg-12">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="#" class="img-fluid rounded-start" height="100" width="100" alt="Alternate Text" />
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card with an image on left</h5>
+                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--PAGINACIÓN-->
+            <div class="col-12">
+                <button class="btn btn-outline-primary" id="btnAnterior"><i class="bi bi-arrow-bar-left"></i> Anterior</button>
+                <button class="btn btn-primary" id="btnSiguiente">Siguiente <i class="bi bi-arrow-bar-right"></i></button>
+            </div>
         </div>
     </section>
 </main>
